--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ docopt==0.6.2
 email-validator==1.1.3
 Flask==2.0.3
 Flask-Session==0.4.0
+Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
+greenlet==1.1.2
 idna==3.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
@@ -16,6 +18,7 @@ MarkupSafe==2.0.1
 pipreqs==0.4.11
 python-dotenv==0.19.2
 requests==2.27.1
+SQLAlchemy==1.4.31
 urllib3==1.26.8
 Werkzeug==2.0.3
 WTForms==3.0.1
