--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ dnspython==2.2.0
 docopt==0.6.2
 email-validator==1.1.3
 Flask==2.0.3
+Flask-Login==0.5.0
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
