--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.7.7
 cachelib==0.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
@@ -7,20 +8,28 @@ dnspython==2.2.0
 docopt==0.6.2
 email-validator==1.1.3
 Flask==2.0.3
+Flask-Cors==3.0.10
 Flask-Login==0.5.0
+Flask-Migrate==3.1.0
 Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
 idna==3.3
+importlib-metadata==4.11.3
+importlib-resources==5.6.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+Mako==1.2.0
 MarkupSafe==2.0.1
 pipreqs==0.4.11
 python-dotenv==0.19.2
 requests==2.27.1
+six==1.16.0
 SQLAlchemy==1.4.31
+url-normalize==1.4.3
 urllib3==1.26.8
 Werkzeug==2.0.3
 WTForms==3.0.1
 yarg==0.1.9
+zipp==3.8.0
