--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -8,6 +8,13 @@ on:
     
 jobs:
   test:
+    env:
+      FLASK_ENV: 'development'
+      SECRET_KEY: 'ABCDEFGH12345678'
+      PG_USER: 'u4i_tester'
+      PG_NAME: 'u4i_test_db'
+      DATABASE_URL_DEV: format('postgresql://{0}:{0}@localhost/{1}', '${{env.PG_USER}}', '${{env.PG_NAME}}')
+      
     runs-on: ubuntu-latest
     
     steps:
@@ -21,6 +28,20 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        
+    - name: Setup PostgreSQL
+  # You may pin to the exact commit or the version.
+  # uses: Harmon758/postgresql-action@0be19fa37850b22cb4c9bbf28a03abbf44abd863
+      uses: Harmon758/postgresql-action@v1.0.0
+      with:
+        # Version of PostgreSQL to use
+        postgresql version: 14
+        # POSTGRES_DB - name for the default database that is created
+        postgresql db: ${{env.PG_NAME}}
+        # POSTGRES_USER - create the specified user with superuser power
+        postgresql user: ${{env.PG_USER}}
+        # POSTGRES_PASSWORD - superuser password
+        postgresql password: ${{env.PG_USER}}
         
     - name: Run tests
       run: |
