--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -15,7 +15,7 @@ jobs:
     env:
       FLASK_ENV: 'development'
       SECRET_KEY: 'ABCDEFGH12345678'
-      DATABASE_URL_DEV: format('postgresql://{0}:{0}@localhost/{1}', '${{ env.PG_USER }}', '${{ env.PG_NAME }}')
+      DATABASE_URL_DEV: format('postgresql://{0}:{0}@localhost/{1}', '${{ env.POSTGRES_USER }}', '${{ env.POSTGRES_NAME }}')
       
     runs-on: ubuntu-latest
     
