--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -15,11 +15,13 @@ jobs:
     env:
       FLASK_ENV: 'development'
       SECRET_KEY: 'ABCDEFGH12345678'
-      DATABASE_URL_DEV: format('postgresql://{0}:{0}@localhost/{1}', '${{ env.POSTGRES_USER }}', '${{ env.POSTGRES_NAME }}')
       
     runs-on: ubuntu-latest
     
     steps:
+    - name: Set Postgres Environment Variables
+      run: |
+        echo "postgresql://$POSTGRES_USER:$POSTGRES_USER@localhost/$POSTGRES_NAME"
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Set up Python Environment
