--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
     - name: Set Postgres Environment Variables
       run: |
-        echo "postgresql://$POSTGRES_USER:$POSTGRES_USER@localhost/$POSTGRES_NAME"
+        echo "postgresql://${POSTGRES_USER}:${POSTGRES_USER}@localhost/$POSTGRES_NAME"
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Set up Python Environment
