--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -20,9 +20,9 @@ jobs:
     
     steps:
     - name: Set Postgres Environment Variables
+      shell: bash
       run: |
-        export DATABASE_URL_DEV="postgresql://${POSTGRES_USER}:${POSTGRES_USER}@localhost/$POSTGRES_NAME";
-        echo $DATABASE_URL_DEV
+        echo "DATABASE_URL_DEV=postgresql://${POSTGRES_USER}:${POSTGRES_USER}@localhost/${POSTGRES_NAME}" >> $GITHUB_ENV
     - name: Checkout code
       uses: actions/checkout@v2
     - name: Set up Python Environment
