--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -48,6 +48,10 @@ jobs:
         # POSTGRES_PASSWORD - superuser password
         postgresql password: ${{env.PG_USER}}
         
+    - name: Create database
+      run: |
+        python -m create_db
+        
     - name: Run tests
       run: |
         python -m pytest -sv
