--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -12,7 +12,6 @@ jobs:
     env:
       FLASK_ENV: 'development'
       SECRET_KEY: 'ABCDEFGH12345678'
-      DATABASE_URL_TEST: postgresql://postgres:postgres@localhost:5432/postgres
     # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
     # Docker Hub image that `container-job` executes in
@@ -49,5 +48,7 @@ jobs:
         pip install -r requirements.txt
 
     - name: Run tests
+      env: 
+        DATABASE_URL_TEST: postgresql://postgres:postgres@127.0.0.1:${{ job.services.postgres.ports['5432'] }}/postgres
       run: |
         python -m pytest -sv tests/functional/test_add_utub_route.py
