--- a/.github/workflows/build_test_lint.yml
+++ b/.github/workflows/build_test_lint.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Build and Test and Lint
 
 on:
   push:
@@ -47,6 +47,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        
+    - name: Linting
+      run: |
+        black .
 
     - name: Run tests
       env: 
