--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -29,3 +29,8 @@ jobs:
     - name: Linting
       run: |
         black .
+
+    - name: Check Python with Black
+      uses: psf/black@stable
+      with:
+        options: "--check --verbose"
