--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -10,23 +10,23 @@ jobs:
   build-test-container:
     # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
-    # Docker Hub image that `container-job` executes in
-    container: python:3.10.12-bookworm
+#     # Docker Hub image that `container-job` executes in
+#     container: python:3.10.12-bookworm
 
-    # Service containers to run with `container-job`
+#     # Service containers to run with `container-job`
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: Set up Python Environment
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10'
-    - name: Install Black
-      run: |
-        python -m pip install --upgrade pip
-        pip install black
+#     - name: Checkout code
+#       uses: actions/checkout@v3
+#     - name: Set up Python Environment
+#       uses: actions/setup-python@v2
+#       with:
+#         python-version: '3.10'
+#     - name: Install Black
+#       run: |
+#         python -m pip install --upgrade pip
+#         pip install black
         
-#     - name: Linting
+# #     - name: Linting
 #       run: |
 #         black --check reorder-python-imports .
 
