--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -17,20 +17,22 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-#     - name: Set up Python Environment
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: '3.10'
-#     - name: Install Black
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install black
-        
-# #     - name: Linting
-#       run: |
-#         black --check reorder-python-imports .
-
     - name: Check Python with Black
       uses: psf/black@stable
       with:
-        options: " --verbose"
+        options: " --verbose"       
+    - name: Verify Python with Black
+      uses: psf/black@stable
+      with:
+        options: "--check --verbose"
+    - name: Extract branch name
+      shell: bash
+      run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
+      id: extract_branch
+    - name: Commit Lint Changes
+      uses: mikeal/publish-to-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH_NAME: '${{ steps.extract_branch.outputs.branch }}' #optional defaults to master
+
+
