--- a/.github/workflows/lint_python.yml
+++ b/.github/workflows/lint_python.yml
@@ -31,5 +31,6 @@ jobs:
         git config --global user.name '${{ secrets.NAME }}'
         git config --global user.email '${{ secrets.MY_EMAIL }}'
         git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-        git commit -am "Automated changes"
-        git push
+        git branch
+      # git commit -am "Automated changes"
+      # git push
