--- a/.github/workflows/python_formatter.yml
+++ b/.github/workflows/python_formatter.yml
@@ -29,6 +29,7 @@ jobs:
       id: git-check
       run: echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
     - name: Commit Lint Changes
+      if: steps.git-check.outputs.modified == 'true'
       run: |
         git config --local user.email "${{ secrets.MY_EMAIL }}"
         git config --local user.name "{{ secrets.NAME }}"
