--- a/.github/workflows/python_formatter.yml
+++ b/.github/workflows/python_formatter.yml
@@ -33,7 +33,7 @@ jobs:
       run: |
         git config --local user.email "${{ secrets.MY_EMAIL }}"
         git config --local user.name "{{ secrets.NAME }}"
-        git commit -a -m "Add changes"
+        git commit -a -m "Formatted Python code - Black"
     - name: Push changes
       if: steps.git-check.outputs.modified == 'true'
       uses: ad-m/github-push-action@master
