--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
-﻿alembic==1.7.7
-black==23.3.0
+alembic==1.7.7
+astroid==2.15.6
 attrs==22.1.0
+autoflake==2.2.0
+black==23.3.0
 cachelib==0.6.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 click==8.0.3
 colorama==0.4.4
+dill==0.3.6
 dnspython==2.2.0
 docopt==0.6.2
 email-validator==1.1.3
@@ -18,28 +21,38 @@ Flask-Session==0.4.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.0
 greenlet==1.1.2
-gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.3
 importlib-resources==5.6.0
 iniconfig==1.1.1
+isort==5.12.0
 itsdangerous==2.0.1
 Jinja2==3.0.3
+lazy-object-proxy==1.9.0
 Mako==1.2.0
 MarkupSafe==2.0.1
+mccabe==0.7.0
+mypy-extensions==1.0.0
 packaging==22.0
+pathspec==0.11.1
 pipreqs==0.4.11
+platformdirs==3.8.1
 pluggy==1.0.0
 psycopg2==2.9.5
+pyflakes==3.0.1
+pylint==2.17.4
 pytest==7.2.0
 python-dotenv==0.19.2
 requests==2.27.1
 six==1.16.0
 SQLAlchemy==1.4.31
 tomli==2.0.1
+tomlkit==0.11.8
+typing_extensions==4.7.1
 url-normalize==1.4.3
 urllib3==1.26.8
 Werkzeug==2.0.3
+wrapt==1.15.0
 WTForms==3.0.1
 yarg==0.1.9
 zipp==3.8.0
