Update README, fix workflows (#97)
* modified python formatter

* fix python formatter

* modified python formatter

* fix python formatter

* Adding Github Action Workflow for Python Formatter

* added python_formatter_workflow

* add newline

* rename folder

* Add changes

* fix naming on workflow jobs

* adding conditional to workflow if no changes

* modified python formatter

* fix python formatter

* Add strings file. Standardize tests with strings.
Fix login and register files.

* Fix workflows to push to correct branch

* Formatted javascript code - Prettier

* Make workflows sequential

* Formatted Python code - Black

* Change name of test workflow action

* Update README.md

* Fix workflows

--- a/.github/workflows/u4i_actions.yml
+++ b/.github/workflows/u4i_actions.yml
@@ -32,7 +32,7 @@ jobs:
       if: steps.git-check.outputs.modified == 'true'
       run: |
         git config --local user.email "${{ secrets.MY_EMAIL }}"
-        git config --local user.name "{{ secrets.NAME }}"
+        git config --local user.name "${{ secrets.NAME }}"
         git commit -a -m "Formatted Python code - Black"
     - name: Push changes
       if: steps.git-check.outputs.modified == 'true'
@@ -67,7 +67,7 @@ jobs:
         if: steps.git-check.outputs.modified == 'true'
         run: |
           git config --local user.email "${{ secrets.MY_EMAIL }}"
-          git config --local user.name "{{ secrets.NAME }}"
+          git config --local user.name "${{ secrets.NAME }}"
           git commit -a -m "Formatted javascript code - Prettier"
       - name: Push changes
         if: steps.git-check.outputs.modified == 'true'
