Update actions to push to correct branch

--- a/.github/workflows/u4i_actions.yml
+++ b/.github/workflows/u4i_actions.yml
@@ -37,7 +37,7 @@ jobs:
       uses: ad-m/github-push-action@master
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        branch: ${{ github.ref }}
+        branch: ${{ github.head_ref }}
 
   javascript-prettier-formatter:
     needs: python-black-formatter
@@ -72,7 +72,7 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+          branch: ${{ github.head_ref }}
 
   run-tests:
     needs: javascript-prettier-formatter
