--- a/requirements.txt
+++ b/requirements.txt
@@ -4,38 +4,38 @@ attrs==22.1.0
 autoflake==2.2.0
 black==23.3.0
 cachelib==0.6.0
-certifi==2021.10.8
+certifi>=2023.07.22
 charset-normalizer==2.0.12
-click==8.0.3
-colorama==0.4.4
+click==8.1.3
+colorama>=0.4.5
 dill==0.3.6
 dnspython==2.2.0
 docopt==0.6.2
 email-validator==1.1.3
 exceptiongroup==1.0.4
-Flask==2.0.3
+Flask>=2.3.0
 Flask-Cors==3.0.10
-Flask-Login==0.5.0
+Flask-Login==0.6.2
 Flask-Migrate==3.1.0
-Flask-Session==0.4.0
-Flask-SQLAlchemy==2.5.1
-Flask-WTF==1.0.0
+Flask-Session==0.5.0
+Flask-SQLAlchemy==3.0.0
+Flask-WTF==1.1.1
 greenlet==1.1.2
 idna==3.3
 importlib-metadata==4.11.3
 importlib-resources==5.6.0
 iniconfig==1.1.1
 isort==5.12.0
-itsdangerous==2.0.1
-Jinja2==3.0.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
 lazy-object-proxy==1.9.0
-Mako==1.2.0
-MarkupSafe==2.0.1
+Mako>=1.2.2
+MarkupSafe>=2.1.1
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==22.0
 pathspec==0.11.1
-pipreqs==0.4.11
+pipreqs>=0.4.12
 platformdirs==3.8.1
 pluggy==1.0.0
 psycopg2==2.9.5
@@ -43,7 +43,7 @@ pyflakes==3.0.1
 pylint==2.17.4
 pytest==7.2.0
 python-dotenv==0.19.2
-requests==2.27.1
+requests>=2.31.0
 six==1.16.0
 SQLAlchemy==1.4.31
 tomli==2.0.1
@@ -51,7 +51,7 @@ tomlkit==0.11.8
 typing_extensions==4.7.1
 url-normalize==1.4.3
 urllib3==1.26.8
-Werkzeug==2.0.3
+Werkzeug>=2.2.3
 wrapt==1.15.0
 WTForms==3.0.1
 yarg==0.1.9
