--- a/.github/workflows/u4i_actions.yml
+++ b/.github/workflows/u4i_actions.yml
@@ -1,88 +1,20 @@
 name: Tests
 
 on:
+  pull_request_target:
   pull_request:
-    types: [opened, synchronize, edited, reopened]
-    branches: [backend, frontend, dev, main]
   
 jobs:
-  python-black-formatter:
-    # Containers must run in Linux based operating systems
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      with:
-        ref: ${{ github.head_ref }}
-        fetch-depth: 0
-    - name: Check Python with Black
-      uses: psf/black@stable
-      with:
-        options: " --verbose"       
-    - name: Verify Python with Black
-      uses: psf/black@stable
-      with:
-        options: "--check --verbose"
-    - name: Check for modified files
-      id: git-check
-      run: echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
-    - name: Commit Lint Changes
-      if: steps.git-check.outputs.modified == 'true'
-      run: |
-        git config --local user.email "${{ secrets.MY_EMAIL }}"
-        git config --local user.name "${{ secrets.NAME }}"
-        git commit -a -m "Formatted Python code - Black"
-    - name: Push changes
-      if: steps.git-check.outputs.modified == 'true'
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.PAT_TOKEN }}
-        branch: ${{ github.head_ref }}
-
-  javascript-prettier-formatter:
-    needs: python-black-formatter
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          # Make sure the actual branch is checked out when running on pull requests
-          ref: ${{ github.head_ref }}
-
-      - name: Setup node
-        uses: actions/setup-node@v3
-        with:
-          node-version: "16"
-      - name: Prettier
-        run: npx prettier --write **/*.js
-        env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
-      - name: Check for modified files
-        id: git-check
-        run: echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
-      - name: Commit Lint Changes
-        if: steps.git-check.outputs.modified == 'true'
-        run: |
-          git config --local user.email "${{ secrets.MY_EMAIL }}"
-          git config --local user.name "${{ secrets.NAME }}"
-          git commit -a -m "Formatted javascript code - Prettier"
-      - name: Push changes
-        if: steps.git-check.outputs.modified == 'true'
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.PAT_TOKEN }}
-          branch: ${{ github.head_ref }}
-
-  run-tests:
-    needs: javascript-prettier-formatter
+  Lint-and-Test:
     env:
-      FLASK_ENV: 'development'
+      FLASK_DEBUG: 'development'
       PRODUCTION: 'false'
       SECRET_KEY: 'ABCDEFGH12345678'
+      GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+
     # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
+
     # Docker Hub image that `container-job` executes in
     container: python:3.10.12-bookworm
 
@@ -104,20 +36,78 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+      with:
+        ref: ${{ github.head_ref }}
+        fetch-depth: 0
+
+    - name: Check Python with Black
+      uses: psf/black@stable
+      with:
+        options: " --verbose"       
+
+    - name: Verify Python with Black
+      uses: psf/black@stable
+      with:
+        options: "--check --verbose"
+
+    - name: Check for modified files
+      id: git-check-python
+      run: |
+        git config --global --add safe.directory /__w/urls4irl/urls4irl;   
+        echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
+
+    - name: Commit Lint Changes
+      if: steps.git-check-python.outputs.modified == 'true'
+      run: |
+        # git config --local user.email "${{ secrets.MY_EMAIL }}"
+        # git config --local user.name "${{ secrets.NAME }}"
+        git commit -a -m "Formatted Python code - Black"
+
+    - name: Setup node
+      uses: actions/setup-node@v3
+      with:
+        node-version: "16"
+
+    - name: Prettier
+      run: npx prettier --write **/*.js
+
+    - name: Check for modified files
+      id: git-check-javascript
+      run: echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
+
+    - name: Commit Lint Changes
+      if: steps.git-check-javascript.outputs.modified == 'true'
+      run: |
+        git config --local user.email "${{ secrets.MY_EMAIL }}"
+        git config --local user.name "${{ secrets.NAME }}"
+        git commit -a -m "Formatted javascript code - Prettier"
+
     - name: Set up Python Environment
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
+
     - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python3 -m venv venv;
+        . ./venv/bin/activate;
+        python3 -m pip install --upgrade pip;
+        pip install -r requirements.txt;
         
     - name: Run tests
       env: 
         DATABASE_URL_TEST: postgresql://postgres:postgres@postgres:${{ job.services.postgres.ports['5432'] }}/postgres
       run: |
-        python -m pytest -sv
+        . ./venv/bin/activate;
+        python3 -m pytest -sv
+        
+    - name: Push changes
+      if: steps.git-check-python.outputs.modified == 'true' || steps.git-check-javascript.outputs.modified == 'true'
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.PAT_TOKEN }}
+        branch: ${{ github.head_ref }}
