--- a/.github/workflows/u4i_actions.yml
+++ b/.github/workflows/u4i_actions.yml
@@ -1,8 +1,10 @@
 name: Tests
 
 on:
-  pull_request_target:
-  pull_request:
+  push:
+      branches: [backend, frontend, dev, main]
+permissions:
+    contents: write
   
 jobs:
   Lint-and-Test:
@@ -41,6 +43,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
       with:
+        token: ${{ secrets.PAT_TOKEN }}
         ref: ${{ github.head_ref }}
         fetch-depth: 0
 
@@ -60,13 +63,6 @@ jobs:
         git config --global --add safe.directory /__w/urls4irl/urls4irl;   
         echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
 
-    - name: Commit Lint Changes
-      if: steps.git-check-python.outputs.modified == 'true'
-      run: |
-        # git config --local user.email "${{ secrets.MY_EMAIL }}"
-        # git config --local user.name "${{ secrets.NAME }}"
-        git commit -a -m "Formatted Python code - Black"
-
     - name: Setup node
       uses: actions/setup-node@v3
       with:
@@ -80,18 +76,25 @@ jobs:
       run: echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
 
     - name: Commit Lint Changes
-      if: steps.git-check-javascript.outputs.modified == 'true'
+      if: steps.git-check-python.outputs.modified == 'true' || steps.git-check-javascript.outputs.modified == 'true'
       run: |
-        git config --local user.email "${{ secrets.MY_EMAIL }}"
-        git config --local user.name "${{ secrets.NAME }}"
-        git commit -a -m "Formatted javascript code - Prettier"
+        git config --global user.email "${{ secrets.MY_EMAIL }}"
+        git config --global user.name "${{ secrets.NAME }}"
+        git commit -a -m "[Auto] Format javascript and python"
+
+    - name: Push changes
+      if: steps.git-check-python.outputs.modified == 'true' || steps.git-check-javascript.outputs.modified == 'true'
+      run: |
+        git push
 
     - name: Set up Python Environment
+      if: steps.git-check-python.outputs.modified == 'false' && steps.git-check-javascript.outputs.modified == 'false'
       uses: actions/setup-python@v2
       with:
         python-version: '3.10'
 
     - name: Install Dependencies
+      if: steps.git-check-python.outputs.modified == 'false' && steps.git-check-javascript.outputs.modified == 'false'
       run: |
         python3 -m venv venv;
         . ./venv/bin/activate;
@@ -99,15 +102,9 @@ jobs:
         pip install -r requirements.txt;
         
     - name: Run tests
+      if: steps.git-check-python.outputs.modified == 'false' && steps.git-check-javascript.outputs.modified == 'false'
       env: 
         DATABASE_URL_TEST: postgresql://postgres:postgres@postgres:${{ job.services.postgres.ports['5432'] }}/postgres
       run: |
         . ./venv/bin/activate;
         python3 -m pytest -sv
-        
-    - name: Push changes
-      if: steps.git-check-python.outputs.modified == 'true' || steps.git-check-javascript.outputs.modified == 'true'
-      uses: ad-m/github-push-action@master
-      with:
-        github_token: ${{ secrets.PAT_TOKEN }}
-        branch: ${{ github.head_ref }}
