--- a/requirements.txt
+++ b/requirements.txt
@@ -3,21 +3,20 @@ astroid==2.15.6
 attrs==22.1.0
 autoflake==2.2.0
 black==23.3.0
-astroid==2.15.6
-attrs==22.1.0
-autoflake==2.2.0
-black==23.3.0
+blinker==1.6.2
 cachelib==0.6.0
-certifi>=2023.07.22
+certifi==2023.7.22
+cffi==1.15.1
 charset-normalizer==2.0.12
 click==8.1.3
-colorama>=0.4.5
+colorama==0.4.6
+cryptography==41.0.3
 dill==0.3.6
 dnspython==2.2.0
 docopt==0.6.2
 email-validator==1.1.3
 exceptiongroup==1.0.4
-Flask>=2.3.0
+Flask==2.3.2
 Flask-Cors==3.0.10
 Flask-Login==0.6.2
 Flask-Migrate==3.1.0
@@ -33,35 +32,32 @@ isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 lazy-object-proxy==1.9.0
-Mako>=1.2.2
-MarkupSafe>=2.1.1
+mailjet-rest==1.3.4
+Mako==1.2.4
+MarkupSafe==2.1.3
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==22.0
 pathspec==0.11.1
-pipreqs>=0.4.12
+pipreqs==0.4.13
 platformdirs==3.8.1
 pluggy==1.0.0
 psycopg2==2.9.5
+pycparser==2.21
 pyflakes==3.0.1
-pylint==2.17.4
-pytest==7.2.0
-pyflakes==3.0.1
+PyJWT==2.8.0
 pylint==2.17.4
 pytest==7.2.0
 python-dotenv==0.19.2
-requests>=2.31.0
+requests==2.31.0
 six==1.16.0
 SQLAlchemy==1.4.31
 tomli==2.0.1
 tomlkit==0.11.8
 typing_extensions==4.7.1
-tomli==2.0.1
-tomlkit==0.11.8
-typing_extensions==4.7.1
 url-normalize==1.4.3
 urllib3==1.26.8
-Werkzeug>=2.2.3
+Werkzeug==2.3.6
 wrapt==1.15.0
 WTForms==3.0.1
 yarg==0.1.9
