Add Redis, and rate limiting, and production diff for rate limiting

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.7.7
 astroid==2.15.6
+async-timeout==4.0.3
 attrs==22.1.0
 autoflake==2.2.0
 black==23.3.0
@@ -7,23 +8,29 @@ blinker==1.6.2
 cachelib==0.6.0
 certifi==2023.7.22
 cffi==1.15.1
+cfgv==3.4.0
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.6
 cryptography==41.0.3
+Deprecated==1.2.14
 dill==0.3.6
+distlib==0.3.7
 dnspython==2.2.0
 docopt==0.6.2
 email-validator==1.1.3
 exceptiongroup==1.0.4
+filelock==3.12.4
 Flask==2.3.2
 Flask-Cors==3.0.10
+Flask-Limiter==3.5.0
 Flask-Login==0.6.2
 Flask-Migrate==3.1.0
 Flask-Session==0.5.0
 Flask-SQLAlchemy==3.0.0
 Flask-WTF==1.1.1
 greenlet==1.1.2
+identify==2.5.29
 idna==3.3
 importlib-metadata==4.11.3
 importlib-resources==5.6.0
@@ -32,31 +39,42 @@ isort==5.12.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 lazy-object-proxy==1.9.0
+limits==3.7.0
 mailjet-rest==1.3.4
 Mako==1.2.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 mccabe==0.7.0
+mdurl==0.1.2
 mypy-extensions==1.0.0
+nodeenv==1.8.0
+ordered-set==4.1.0
 packaging==22.0
 pathspec==0.11.1
 pipreqs==0.4.13
 platformdirs==3.8.1
 pluggy==1.0.0
+pre-commit==3.4.0
 psycopg2==2.9.5
 pycparser==2.21
 pyflakes==3.0.1
+Pygments==2.17.2
 PyJWT==2.8.0
 pylint==2.17.4
 pytest==7.2.0
 python-dotenv==0.19.2
+PyYAML==6.0.1
+redis==5.0.1
 requests==2.31.0
+rich==13.7.0
 six==1.16.0
 SQLAlchemy==1.4.31
 tomli==2.0.1
 tomlkit==0.11.8
 typing_extensions==4.7.1
 url-normalize==1.4.3
-urllib3~=1.26.17
+urllib3==1.26.18
+virtualenv==20.24.5
 Werkzeug==2.3.6
 wrapt==1.15.0
 WTForms==3.0.1
