--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ Flask-Session==0.5.0
 Flask-SQLAlchemy==3.0.0
 Flask-WTF==1.1.1
 greenlet==1.1.2
+gunicorn==21.2.0
 identify==2.5.29
 idna==3.3
 importlib-metadata==4.11.3
