Setup markers for all tests to help divide

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,11 @@
 addopts = -sv
 filterwarnings =
 	ignore::DeprecationWarning:flask_wtf.*:
+markers =
+	tags: associated with utub tags
+	urls: associated with utub urls
+	utubs: associated with utub generation and deletion
+	members: associated with utub member addition and removal
+	splash: associated with login, register, email validation, passwords
+	unit: associated with unit tests
+
