--- a/.github/workflows/u4i_actions.yml
+++ b/.github/workflows/u4i_actions.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Format and Run Tests
 
 on: 
   push:
@@ -9,50 +9,24 @@ on:
 permissions:
   contents: write
 
-jobs:
-  Lint-and-Test:
-    env:
-      FLASK_DEBUG: 'development'
-      PRODUCTION: 'false'
-      SECRET_KEY: 'ABCDEFGH12345678'
-      MAILJET_API_KEY: ${{ secrets.MAILJET_API_KEY }}
-      MAILJET_SECRET_KEY: ${{ secrets.MAILJET_SECRET_KEY }}
-      BASE_EMAIL: ${{ secrets.BASE_EMAIL }}
 
+jobs:
+  Lint-and-Format:
+    outputs:
+      code-pushed: ${{ steps.allow-tests.outputs.pushed }}
     # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
-
-    # Service containers to run with `container-job`
-    services:
-      # Label used to access the service container
-      postgres:
-        # Docker Hub image
-        image: postgres
-        # Map the ports
-        ports:
-          - 5432:5432
-        # Provide the password for postgres
-        env:
-          POSTGRES_DB: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-        # Set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - name: Get Token
         id: get_workflow_token
-        uses: peter-murray/workflow-application-token-action@v2
+        uses: peter-murray/workflow-application-token-action@v3
         with:
           application_id: ${{ secrets.APPLICATION_ID }}
           application_private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
 
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         env:
           GITHUB_TOKEN: ${{ steps.get_workflow_token.outputs.token }}
         with:
@@ -61,9 +35,9 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10.12'
+          python-version: '3.11.2'
 
       - name: Check Python with Black
         uses: psf/black@stable
@@ -82,9 +56,9 @@ jobs:
           echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
 
       - name: Setup node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: "16"
+          node-version: "20"
 
       - name: Prettier
         run: npx prettier --write "**/*.js"
@@ -93,7 +67,7 @@ jobs:
         id: git-check-javascript
         run: echo "modified=$(if git diff-index --quiet HEAD --; then echo "false"; else echo "true"; fi)" >> $GITHUB_OUTPUT
 
-      - name: Commit Lint Changes
+      - name: Commit and Push Lint Changes
         if: steps.git-check-python.outputs.modified == 'true' || steps.git-check-javascript.outputs.modified == 'true'
         env:
           GITHUB_TOKEN: ${{ steps.get_workflow_token.outputs.token }}
@@ -101,24 +75,104 @@ jobs:
           git config --global user.email "${{ secrets.BOT_EMAIL }}"
           git config --global user.name "${{ secrets.BOT_NAME }}"
           git commit -a -m "[Auto] Format javascript and python"
+          git push
+          exit 0;
+      
+      # Only run the tests if the no changes were committed and pushed from the formatter
+      - name: Allow Tests to Run
+        if: steps.git-check-python.outputs.modified == 'false' || steps.git-check-javascript.outputs.modified == 'false'
+        id: allow-tests
+        run: |
+          echo "pushed=false" >> "$GITHUB_OUTPUT"
 
-      - name: Push changes
-        if: steps.git-check-python.outputs.modified == 'true' || steps.git-check-javascript.outputs.modified == 'true'
+
+  Run-Tests:
+    needs: Lint-and-Format
+    #if: needs.Lint-and-Format.outputs.code-pushed == 'false'
+    env:
+      FLASK_DEBUG: 'development'
+      PRODUCTION: 'false'
+      SECRET_KEY: 'ABCDEFGH12345678'
+      MAILJET_API_KEY: ${{ secrets.MAILJET_API_KEY }}
+      MAILJET_SECRET_KEY: ${{ secrets.MAILJET_SECRET_KEY }}
+      BASE_EMAIL: ${{ secrets.BASE_EMAIL }}
+
+    # Containers must run in Linux based operating systems
+    runs-on: ubuntu-latest
+
+    # Splits tests into mulitple workers
+    strategy:
+      matrix:
+        worker: [[1, 'URL Integration Tests'], [2, 'UTub Integration Tests and Unit Tests'], [3,'Splash/Member/Tag Integration Tests']]
+
+    #name: ${{ matrix.worker[1] }}
+
+    name: ${{ (needs.Lint-and-Format.outputs.code-pushed == 'false') && format('{0}', matrix.worker[1]) || format('Skipped - {0}', matrix.worker[1] )}}
+
+    # Service containers to run with `container-job`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: ${{ (needs.Lint-and-Format.outputs.code-pushed == 'false') && 'postgres' || '' }}
+        #image: postgres
+        # Map the ports
+        ports:
+          - 5432:5432
+        # Provide the password for postgres
+        env:
+          POSTGRES_DB: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    
+    steps:
+      - name: Get Token
+        if: needs.Lint-and-Format.outputs.code-pushed == 'false'
+        id: get_workflow_token
+        uses: peter-murray/workflow-application-token-action@v3
+        with:
+          application_id: ${{ secrets.APPLICATION_ID }}
+          application_private_key: ${{ secrets.APPLICATION_PRIVATE_KEY }}
+
+      - name: Checkout code
+        if: needs.Lint-and-Format.outputs.code-pushed == 'false'
+        uses: actions/checkout@v4
         env:
           GITHUB_TOKEN: ${{ steps.get_workflow_token.outputs.token }}
-        run: |
-          git push
+        with:
+          token: ${{ steps.get_workflow_token.outputs.token }}
+          ref: ${{ github.head_ref }}
+          fetch-depth: 0
 
-      - name: Install Dependencies
-        if: steps.git-check-python.outputs.modified == 'false' && steps.git-check-javascript.outputs.modified == 'false'
+      # 👇 We need to set up the env vars from values taken from the matrix
+      - name: Set up worker env vars
+        if: needs.Lint-and-Format.outputs.code-pushed == 'false'
         run: |
-          python3 -m venv venv;
+          echo "GITHUB_WORKER_ID=${{matrix.worker[0]}}" >> $GITHUB_ENV
+
+      - name: Setup Python
+        if: needs.Lint-and-Format.outputs.code-pushed == 'false'
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11.2'
+          cache: 'pip'
+      
+      - name: Install Dependencies
+        if: needs.Lint-and-Format.outputs.code-pushed == 'false'
+        run: |
+          python3.11 -m venv venv;
           . ./venv/bin/activate;
-          python3 -m pip install --upgrade pip;
+          python3.11 -m pip install --upgrade pip;
           pip install -r requirements.txt;
 
       - name: Run tests
-        if: steps.git-check-python.outputs.modified == 'false' && steps.git-check-javascript.outputs.modified == 'false'
+        if: needs.Lint-and-Format.outputs.code-pushed == 'false'
         env:
           DATABASE_URL_TEST: postgresql://postgres:postgres@localhost:${{ job.services.postgres.ports['5432'] }}/postgres
         run: |
