--- a/requirements.txt
+++ b/requirements.txt
@@ -55,8 +55,9 @@ pathspec==0.11.1
 pipreqs==0.4.13
 platformdirs==3.9.1
 pluggy==1.0.0
-pre-commit==3.4.0
+pre-commit==3.7.0
 psycopg2==2.9.5
+psycopg2-binary==2.9.9
 pycparser==2.21
 pyflakes==3.0.1
 Pygments==2.17.2
@@ -70,6 +71,7 @@ requests==2.31.0
 rich==13.7.0
 six==1.16.0
 SQLAlchemy==1.4.31
+style==1.1.0
 tomli==2.0.1
 tomlkit==0.11.8
 typing_extensions==4.7.1
