--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -29,3 +29,10 @@ jobs:
             exclude: ".git,migrations"
             args: "--extend-ignore E501"
 
+      - name: Setup node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+
+      - name: Verify JavaScript with ESLint
+        run: npx eslint src/static/scripts/** --no-config-lookup
