--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: Tests
 
 on: 
-  push:
-  pull_request:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["Linting"]
+    types:
+      - completed
 
 jobs:
   Tests:
