--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,10 +1,11 @@
 name: Check Formatting
 
 on: 
-  push:
-  pull_request:
-    branches:
-      - main
+  workflow_call:
+    inputs:
+      branch_ref:
+        required: true
+        type: string
 
 jobs:
   Format:
@@ -15,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ inputs.branch_ref }}
 
       - name: Setup Python
         uses: actions/setup-python@v5
