--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,10 +1,11 @@
 name: Linting
 
 on: 
-  workflow_run:
-    workflows: ["Check Formatting"]
-    types:
-      - completed
+  workflow_call:
+    inputs:
+      branch_ref:
+        required: true
+        type: string
 
 jobs:
   Lint:
@@ -15,7 +16,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ inputs.branch_ref }}
 
       - name: Setup Python
         uses: actions/setup-python@v5
