--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,18 @@
 name: Tests
 
 on: 
-  workflow_run:
-    workflows: ["Linting"]
-    types:
-      - completed
+  workflow_call:
+    inputs:
+      branch_ref:
+        required: true
+        type: string
+    secrets:
+      MAILJET_API_KEY:
+        required: true
+      MAILJET_SECRET_KEY:
+        required: true
+      BASE_EMAIL:
+        required: true
 
 jobs:
   Tests:
@@ -51,7 +59,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ inputs.branch_ref }}
 
       # 👇 We need to set up the env vars from values taken from the matrix
       - name: Set up worker env vars
