--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
 
     # Containers must run in Linux based operating systems
     runs-on: ubuntu-latest
+    timeout-minutes: 5
 
     # Splits tests into multiple workers
     strategy:
