Call tests via commandline arg with pytest after removing venv

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -92,4 +92,4 @@ jobs:
         env:
           DATABASE_URL_TEST: postgresql://postgres:postgres@localhost:${{ job.services.postgres.ports['5432'] }}/postgres
         run: |
-          pytest 
+          python3.11 -m pytest 
