--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -21,6 +21,7 @@ docopt==0.6.2
 email-validator==1.1.3
 exceptiongroup==1.0.4
 filelock==3.12.4
+flake8==7.0.0
 Flask==2.3.2
 Flask-Cors==3.0.10
 Flask-Limiter==3.5.0
@@ -58,8 +59,9 @@ pluggy==1.0.0
 pre-commit==3.7.0
 psycopg2==2.9.5
 psycopg2-binary==2.9.9
+pycodestyle==2.11.1
 pycparser==2.21
-pyflakes==3.0.1
+pyflakes==3.2.0
 Pygments==2.17.2
 PyJWT==2.8.0
 pylint==2.17.4
