--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,6 @@ repos:
     - id: black
       language_version: python3.11
 
-
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: "v3.1.0"
     hooks:
@@ -17,3 +16,9 @@ repos:
     hooks:
     - id: flake8
       args: [--extend-ignore, E501]
+
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: "v9.1.1"
+    hooks:
+    - id: eslint
+      args: [--no-config-lookup]
